--- a/srcs/requirements/vsftp/Dockerfile
+++ b/srcs/requirements/vsftp/Dockerfile
@@ -1,28 +1,23 @@
 FROM debian:11
 
-ENV DEBIAN_FRONTEND noninteractive
+ARG FTP_USER
+ARG FTP_PASS
 
-RUN apt-get --quiet update -y  && apt-get --quiet upgrade -y  && apt-get --quiet install -y  --no-install-recommends vsftpd
+RUN apt-get --quiet update -y \
+	&& apt-get --quiet upgrade -y \
+	&& apt-get --quiet install -y --no-install-recommends vsftpd
 
 COPY conf/ftp.conf /etc/vsftpd.conf
-COPY conf/vsftpd.userlist /etc/vsftpd.userlist
+# COPY conf/vsftpd.userlist /etc/vsftpd.userlist
 
 RUN mkdir -p /var/www/
 
-RUN addgroup --system vsftp && adduser --system --group vsftp 
-RUN chown -R vsftp:vsftp /etc/vsftpd.conf
+RUN adduser $FTP_USER --disabled-password
+RUN echo "$FTP_USER:$FTP_PASS" | /usr/sbin/chpasswd &> /dev/null
 RUN touch /var/log/vsftpd.log 
-RUN chown vsftp:vsftp /var/log/vsftpd.log /var/www/
-
-RUN adduser borys --disabled-password
-RUN echo "borys:marvelpass" | /usr/sbin/chpasswd
-RUN mkdir -p var/www/borys/
-RUN chmod 550 var/www/borys/
-RUN chown -R borys: var/www/borys/
+RUN chown -R $FTP_USER:$FTP_USER var/www/ /var/log/vsftpd.log 
+RUN chmod +x /etc/vsftpd.conf
 
 
-USER vsftp
-
-EXPOSE 7042
 
 ENTRYPOINT ["vsftpd", "/etc/vsftpd.conf"]
