--- a/srcs/requirements/vsftp/conf/ftp.conf
+++ b/srcs/requirements/vsftp/conf/ftp.conf
@@ -16,7 +16,9 @@ chown_uploads=YES
 
 xferlog_file=/var/log/vsftpd.log
 listen=YES
-listen_port=7042
+connect_from_port_20=YES
+listen_port=21
+listen_address=0.0.0.0
 background=NO
 run_as_launching_user=YES
 seccomp_sandbox=NO
@@ -35,19 +37,6 @@ chroot_local_user=YES
 
 
 
-
-
-
-
-
-
-
-
-
-
-# anonymous_enable=NO
-
-# connect_from_port_20=YES
 
 
 # allow_writeable_chroot=YES
