--- a/M09/ex01/Makefile
+++ b/M09/ex01/Makefile
@@ -6,16 +6,16 @@
 #    By: tlegrand <tlegrand@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/15 11:48:58 by tlegrand          #+#    #+#              #
-#    Updated: 2023/09/18 22:45:17 by tlegrand         ###   ########.fr        #
+#    Updated: 2024/05/28 10:42:00 by tlegrand         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	
+NAME	=	RPN
 
 
-HDR		=	
+HDR		=	RPN.hpp
 
-SRC		=	
+SRC		=	main.cpp RPN.cpp
 
 OBJ_DIR	=	.obj/
 OBJ_LST	=	${SRC:.cpp=.o}
